# typeshit

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: Dialog.svelte  Editor.svelte  Preview.svelte  StatusBar.svelte  TabBar.svelte  TitleBar.svelte
src/lib/editor/: setup.ts
src/lib/fs/: files.ts
src/lib/markdown/: renderer.ts
src/lib/state/: dialog.svelte.ts  prefs.svelte.ts  scroll.ts  tabs.svelte.ts
src/styles/: app.css  markdown.css
